[project]
name = "mcp-server-mas-sequential-thinking"
version = "0.4.1"
description = "MCP Agent Implementation for Sequential Thinking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Frad LEE", email = "fradser@gmail.com" },
    { name = "Alain Ivars", email = "alainivars@gmail.com" },
]
dependencies = [
    "agno>=1.8.1,<2.0.0",
    "exa-py>=1.0.8,<2.0.0",
    "python-dotenv",
    "mcp>=1.13.1,<2.0.0",
    "groq",
    "ollama",
    "openrouter",
    "openai>=1.40.0,<2.0.0",
    "httpx[socks]>=0.28.1",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
mcp-server-mas-sequential-thinking = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "README.md"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
